--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -1,4 +1,4 @@
-example.property: "I AM IN THE DEFAULT"
+example.property: "I AM THE DEFAULT (GIT REPO CONFIG)"
 
 ## JPA
 spring.jpa.generate-ddl: "false"
