--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -12,7 +12,7 @@ example.property: "I AM THE DEFAULT (GIT REPO CONFIG)"
 
 spring.jpa.database: "POSTGRESQL"
 spring.jpa.show-sql: "true"
-spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQL10Dialect"
 
 spring.database.driverClassName: "org.postgresql.Driver"
 
