--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -2,8 +2,8 @@ example.property: "I AM THE DEFAULT (GIT REPO CONFIG)"
 
 
 ## JPA
-#spring.jpa.generate-ddl: "false"
-#spring.jpa.hibernate.ddl-auto: "none"
+spring.jpa.generate-ddl: "true"
+spring.jpa.hibernate.ddl-auto: "update"
 #spring.jpa.show-sql: "true"
 
 ## H2
