--- a/zuulservice/zuulservice.yml
+++ b/zuulservice/zuulservice.yml
@@ -4,3 +4,4 @@ zuul:
   routes:
     licensingservice: /licensing/**
     organizationservice: /organization/**
+    authenticationservice: /authentication/**
