--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -19,3 +19,9 @@ security:
     client:
       grant-type: client_credentials
 
+## REDIS
+spring:
+  redis:
+    port: 6379
+    host: localhost
+    
