--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -19,9 +19,11 @@ security:
     client:
       grant-type: client_credentials
 
-## REDIS
+## REDIS, ZIPKIN
 spring:
   redis:
     port: 6379
     host: localhost
-    
+  zipkin:
+    base-url: "http://localhost:9411"
+
