--- a/organizationservice/organizationservice.yml
+++ b/organizationservice/organizationservice.yml
@@ -19,3 +19,7 @@ security:
     client:
       grant-type: client_credentials
 
+## ZIPKIN
+spring:
+  zipkin:
+    base-url: "http://localhost:9411"
